[project]
authors = [
    {name="Vladimir Berezenko", email="qmaster2000@gmail.com"}
]
name = "asyncframework"
description = "Async framework easy async python applications and serivces development library."
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "packets @ git+https://github.com/Q-Master/packets.py.git@main",
    "uvloop",
    "setproctitle"
]
classifiers = [
    "Development Status :: 5", 
    "Intended Audience :: Developers", 
    "Programming Language :: Python", 
    "Programming Language :: Python :: 3", 
    "Programming Language :: Python :: 3 :: Only", 
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12", 
    "Programming Language :: Python :: 3.13", 
    "Programming Language :: Python :: 3.14", 
    "Operating System :: OS Independent", 
    "Topic :: Software Development :: Libraries", 
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
    "asyncframework",
    "application",
    "developer",
    "amqp", 
    "rabbitmq", 
    "async", 
    "service"
]
license = "MIT"
license-files = ["LICENSE"]
readme = "ReadMe.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
