[metadata]
name = asyncframework
version = attr: asyncframework.__version__
author = Vladimir Berezenko
author_email = qmaster2000@gmail.com
description = Async framework easy async python applications and serivces development library.
license = MIT
keywords =
    asyncframework
    async
    application
    developer
    service

url = https://github.com/Q-Master/framework.py
long_description = file: ReadMe.md
long_description_content_type = text/x-md
classifiers =
    Development Status :: 5
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
packages = find:
install_requires =
    packets @ git+https://github.com/Q-Master/packets.py.git@main
    uvloop
    setproctitle

[options.packages.find]
exclude =
    tests
    tests.*

[tool:pytest]
norecursedirs = .* *.egg *.egg-info bin dist include lib local share static docs
python_files = tests/test_*.py
