[metadata]
name = asyncframework
version = attr: asyncframework.__version__
url = https://github.com/Q-Master/framework.py

[options]
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*

[tool:pytest]
norecursedirs = .* *.egg *.egg-info bin dist include lib local share static docs
python_files = tests/test_*.py
